[package]
name = "wakessh"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
futures-concurrency = "7.7.1"
happy-eyeballs = { version = "0.2.1", features = ["tokio"] }
rustix = { version = "1.1.3", features = ["net", "stdio"] }
tokio = { version = "1.49.0", features = ["macros", "net", "process", "rt"] }
