[package]
name = "wakessh"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/ComputerDruid/wakessh"
license = "MIT OR Apache-2.0"
description = "A connection helper for ssh that can run a wakeonlan script if the ssh target is too slow to respond"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
futures-concurrency = "7.7.1"
happy-eyeballs = { version = "0.2.1", features = ["tokio"] }
rustix = { version = "1.1.3", features = ["net", "stdio"] }
tokio = { version = "1.49.0", features = ["macros", "net", "process", "rt"] }
